feat: auth frontend and  home main
